Set overflow hidden on the feed to attempt to prevent the horizontal scroll from appearing on the iphone

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -101,6 +101,7 @@ table {
 
 .feed-items {
   width: 310px;
+  overflow: hidden;
 }
 
 #spinner {
